--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,9 @@
             <input type="date" id="date" name="date"><br><br>
             <label for="name">Nome da Empresa:</label>
             <input type="text" id="name" name="name"><br><br>
-            <button type="submit">Buscar</button>
+            <div class="btn">
+                <button type="submit">Buscar</button>
+            </div>
         </form>
 
         <h2>Resultados:</h2>
